<resources>
    <string name="app_name">Unity Planner</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_assignment_viewer">Assignment</string>

    <string name="title_activity_course_viewer">Course</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string-array name="pref_notification_daysadvance">
        <item>Always notify</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>1 Week</item>
        <item>2 Weeks</item>
    </string-array>

    <string-array name="pref_notification_daysadvance_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>7</item>
        <item>14</item>
    </string-array>

    <!--Settings for Sync-->
    <string-array name="pref_sync_classroom">
        <item>Every Hour</item>
        <item>Every Two Hours</item>
        <item>Every 12 Hours</item>
        <item>Every 24 Hours</item>
    </string-array>

    <string-array name="pref_sync_classroom_values">
        <item>1</item>
        <item>2</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_about">About</string>
    <string name="pref_notification_notifytime">Notification Time</string>
    <string name="pref_notifications_daysadvance">Days in advance to notify</string>
    <string name="invitation_message">Download Unity Planner and unify your school life today!</string>
    <string name="dashboard_logout">Log Out</string>
    <string name="settings_about_description">Unity Planner helps students like you
        manage assignments and courses in a centralized and simplified way.\n\n
        Created by Nick DeGroot, a self taught high school developer</string>
    <string name="invitation_cta">Download Now!</string>

    <string name="shortcut_assignment_short_label">Create assignment</string>
    <string name="shortcut_course_short_label">Create course</string>

    <string name="title_activity_create_assignment">Create an assignment</string>
    <string name="title_activity_create_course">Create a course</string>

    <string name="late">Late</string>
    <string name="delete">Delete</string>
    <string name="completed">Completed</string>
    <string name="extra_info">Description</string>
    <string name="date">Date</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="assignment_logo_description">Assignment Logo</string>
    <string name="title_activity_test">Test</string>
    <string name="sync">Syncing...</string>
    <string name="pref_header_sync">Sync</string>
    <string name="course_viewer_description">Description</string>
    <string name="course_viewer_room_number">Room Number</string>
    <string name="course_viewer_times">Times</string>
    <string name="course_viewer_teacher_name">Teacher\'s Name</string>
    <string name="assignment_viewer_not_done">Still working</string>
    <string name="assignment_viewer_done">All done!</string>
    <string name="assignment_viewer_none">None</string>
    <string name="activity_course_add_time_title">Add times</string>
    <string name="finished_assignments">Finished Assignments</string>
    <string name="dashboard_sync">Sync With Classroom</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_add_button">Add assignment button</string>
</resources>
