<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_old_assignments"
        android:orderInCategory="0"
        android:title="@string/finished_assignments"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="50"
        android:title="@string/dashboard_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_showcase"
        android:orderInCategory="100"
        android:title="Launch Showcase"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="1000"
        android:title="@string/dashboard_logout"
        app:showAsAction="never"/>

</menu>
