<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nbdeg.unityplanner.EditAssignment"
    android:padding="15dp"
    android:visibility="invisible"
    android:id="@+id/assignment_edit_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_shortcut_assignment"
                android:contentDescription="@string/assignment_logo_description"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

                <EditText
                    android:id="@+id/assignment_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/assignment_name" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:focusable="false">

            <EditText
                android:id="@+id/assignment_edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:id="@+id/textInputLayout2">

            <EditText
                android:id="@+id/assignment_edit_extra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/extra_info"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/assignment_edit_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/assignment_edit_completed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/completed" />
    </LinearLayout>

    <Button
        android:id="@+id/assignment_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/delete"/>

</RelativeLayout>
