<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nbdeg.unityplanner.AssignmentViewer"
    tools:showIn="@layout/activity_course_viewer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/course_viewer_teacher_name_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_school_black" />

            <TextView
                android:id="@+id/course_viewer_teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/course_viewer_teacher_name_logo"
                android:layout_toRightOf="@id/course_viewer_teacher_name_logo"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_viewer_teacher_name"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/course_viewer_teacher_name_logo"
                android:layout_toRightOf="@id/course_viewer_teacher_name_logo"
                android:text="@string/course_viewer_teacher_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/course_viewer_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_schedule_black" />

            <TextView
                android:id="@+id/course_viewer_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/course_viewer_time_title"
                android:layout_toRightOf="@id/course_viewer_time_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_viewer_time"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/course_viewer_time_title"
                android:layout_toRightOf="@id/course_viewer_time_title"
                android:text="@string/course_viewer_times"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/course_viewer_room_number_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_room_black" />

            <TextView
                android:id="@+id/course_viewer_room_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/course_viewer_room_number_logo"
                android:layout_toRightOf="@id/course_viewer_room_number_logo"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_viewer_room_number"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/course_viewer_room_number_logo"
                android:layout_toRightOf="@id/course_viewer_room_number_logo"
                android:text="@string/course_viewer_room_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/course_viewer_description_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_description_black" />

            <TextView
                android:id="@+id/course_viewer_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/course_viewer_description_logo"
                android:layout_toRightOf="@id/course_viewer_description_logo"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_viewer_description"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/course_viewer_description_logo"
                android:layout_toRightOf="@id/course_viewer_description_logo"
                android:text="@string/course_viewer_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

        </RelativeLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
